--- a/wp-content/themes/belend/src/scss/layout/_header.scss
+++ b/wp-content/themes/belend/src/scss/layout/_header.scss
@@ -3,16 +3,15 @@ $header-height: 96px;
 
 .main-header {
     display: flex;
+    align-items: center;
+    position: fixed;
     height: $header-height;
-    padding: 0 $gutter * 3;
     top: 0;
     left: 0;
     right: 0;
+    padding: 0 $gutter * 3;
+    background-color: $white;
     z-index: 100;
-    align-items: center;
-    &.on{
-        background: rgba($white, 0.9);
-    }
     .container {
         display: flex;
         width: 100%;
@@ -47,19 +46,20 @@ $header-height: 96px;
             transform: "0.23s"
         )
     );
+    z-index: 2;
     .menu {
         font-weight: 700;
         text-align: center;
-        > li{
+        > li {
             padding: 0;
             margin: 9vh 0 0;
-            &:before{
+            &:before {
                 content: none;
             }
-            &:first-child{
+            &:first-child {
                 margin-top: 0;
             }
-            &.has-btn{
+            &.has-btn {
                 position: absolute;
                 bottom: 30px;
                 left: 0;
@@ -104,8 +104,9 @@ $header-height: 96px;
                 background-color: "0.23s 0.23s"
             )
         );
-        &:before, &:after {
-            content: '';
+        &:before,
+        &:after {
+            content: "";
             width: 100%;
             height: 100%;
             position: absolute;
@@ -153,11 +154,10 @@ $header-height: 96px;
     }
 }
 
-
-@media (min-width: $tablet){
-    .main-header{
+@media (min-width: $tablet) {
+    .main-header {
         position: fixed;
-        .logo-wrapper{
+        .logo-wrapper {
             display: flex;
             width: 250px;
             align-items: center;
@@ -166,45 +166,49 @@ $header-height: 96px;
     }
 }
 
-@media (min-width: $desktop-small){
-    .main-header{
+@media (min-width: $desktop-small) {
+    .main-header {
         background: none;
-        .logo-wrapper{
+        background: transparent;
+        &.scrolled {
+            background: rgba($white, 0.9);
+        }
+        .logo-wrapper {
             width: 335px;
         }
-        .logo{
-            > img{
+        .logo {
+            > img {
                 width: 200px;
             }
-            + img{
+            + img {
                 width: 95px;
                 margin-left: 0;
             }
         }
     }
 
-    .burger{
+    .burger {
         display: none;
     }
 
-    .main-navigation{
+    .main-navigation {
         position: static;
         background: none;
     }
 
-    .main-navigation-container{
+    .main-navigation-container {
         display: block;
         padding: 0;
         position: static;
-        .menu{
+        .menu {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin: 0;
-            > li{
+            > li {
                 padding: 0 0 0 35px;
                 margin: 0;
-                &.has-btn{
+                &.has-btn {
                     position: static;
                 }
             }
